# umd-lpc1769

./: .gitignore  CMakeLists.txt  LPCXpressoDir.cmake  README.md
AnalogOutDMA/: CMakeLists.txt  cmake_install.cmake
AnalogOutDMA/src/: main.c  main.h
AnalogRepeatDMA/: CMakeLists.txt
AnalogRepeatDMA/src/: analogrepeatdma.c  analogrepeatdma.h
CMSISv2p00_LPC17xx/: CMakeLists.txt
HD44780_Example/: CMakeLists.txt
HD44780_Example/src/: hd44780.c  hd44780.h  hd44780example.c  pins.h
Platform/: LPC1769.cmake  LPC1769.ld  LPC1769_project_default.cmake  LPC1769_semihosting.ld  LPC1769_targets.cmake
SDAudio/: CMakeLists.txt
SDAudio/src/: pins.h  sd.c  sd.h  sdaudio.c  sdaudio.h
SDCard/: CMakeLists.txt  pre
SDCard/src/: main.c  main.h  sdcomm_spi.h
SDDMA/: CMakeLists.txt
SDDMA/src/: sd_dma.c  sd_dma.h
SSD1289_Example/: CMakeLists.txt
SSD1289_Example/src/: fonts.h  pins.h  ssd1289.c  ssd1289example.c  ssd1289example.h  touch.c.spi
Semihosting/: CMakeLists.txt
Semihosting/src/: semihosting.c
Skeleton/: CMakeLists.txt
Skeleton/src/: main.c  main.h
SoundRecorder/: CMakeLists.txt
SoundRecorder/src/: main.c  main.h  sd.h  soundrecorder.c  soundrecorder.h  spi.h
SoundRecorderSD/: CMakeLists.txt
SoundRecorderSD/src/: .#soundrecordersd.c  pins.h  soundrecordersd.c  soundrecordersd.h  spi.c  ssd1289.c  ssd1289.h  touch.c  touch.h
UMD_LPC1769/: CMakeLists.txt  cmake_install.cmake
UMD_LPC1769/inc/: PLL.h  UMDLPC.h
UMD_LPC1769/inc/UMDLPC/: assert.h
UMD_LPC1769/inc/UMDLPC/system/: clocking.h  dma.h  pconp.h  pinsel.h  sd.h  spi.h  systick.h
UMD_LPC1769/inc/UMDLPC/util/: fonts.h  pins.h  util.h
UMD_LPC1769/src/: Clocking.c  PLL.c  PLL.h  clocking.c  sd.c  spi.c
_setup/: CMakeLists.txt
sd_driver/: CMakeLists.txt
sd_driver/src/: sd.c  sd.h  sd_driver_test.c  sd_driver_test.h  spi.c  spi.h
